Añadi sistema de pago de testeo ( se puede modiicar si gustan) tambien intente añadir mapas q esta en prueba use mapbox

--- a/src/global.scss
+++ b/src/global.scss
@@ -39,3 +39,6 @@
 // @import "swiper/css/pagination";
 @import "./app/app.component.scss";
 
+
+@import "mapbox-gl/dist/mapbox-gl.css";
+@import "@mapbox/mapbox-gl-geocoder/dist/mapbox-gl-geocoder.css";
