feat: implementar clientroute con 5 pasos de checkout

--- a/src/global.scss
+++ b/src/global.scss
@@ -40,5 +40,5 @@
 @import "./app/app.component.scss";
 
 
-@import "mapbox-gl/dist/mapbox-gl.css";
-@import "@mapbox/mapbox-gl-geocoder/dist/mapbox-gl-geocoder.css";
+@import "node_modules/mapbox-gl/dist/mapbox-gl.css";
+@import "node_modules/@mapbox/mapbox-gl-geocoder/dist/mapbox-gl-geocoder.css";
