--- a/src/app/pages/pedidos/pedidos.page.html
+++ b/src/app/pages/pedidos/pedidos.page.html
@@ -1,8 +1,31 @@
+<ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/carrito"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Mis Pedidos</ion-title>
+  </ion-toolbar>
+</ion-header>
+
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">pedidos</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <div *ngIf="pedidos.length === 0; else listaPedidos" class="empty-state">
+    <p>No tienes pedidos aún</p>
+  </div>
+
+  <ng-template #listaPedidos>
+    <ion-list>
+      <ion-item *ngFor="let pedido of pedidos" (click)="verDetalle(pedido)">
+        <ion-label>
+          <h2>Pedido #{{ pedido.id }}</h2>
+          <p>S/. {{ pedido.total }}</p>
+        </ion-label>
+        <div slot="end" class="estado-badge">
+          <span class="punto" [ngClass]="'punto-' + pedido.status"></span>
+          <span class="status-text">{{ getStatusLabel(pedido.status) }}</span>
+        </div>
+      </ion-item>
+    </ion-list>
+  </ng-template>
 </ion-content>
+
 <app-footer></app-footer>
