--- a/src/app/pages/pedidos/pedidos.page.html
+++ b/src/app/pages/pedidos/pedidos.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/carrito"></ion-back-button>
+      <ion-back-button defaultHref="/inicio"></ion-back-button>
     </ion-buttons>
     <ion-title>Mis Pedidos</ion-title>
   </ion-toolbar>
