--- a/src/app/pages/pedidos/pedidos.page.scss
+++ b/src/app/pages/pedidos/pedidos.page.scss
@@ -121,8 +121,8 @@
     display: inline-block;
   }
 
-  .status-pendiente { background: #f59e0b; } /* amarillo */
-  .status-en-camino { background: #3b82f6; } /* azul */
-  .status-entregado { background: #10b981; } /* verde */
-  .status-cancelado { background: #ef4444; } /* rojo */
+  .status-pendiente { background: #ff5e00; } /* amarillo */
+  .status-en-camino { background: #0059e9; } /* azul */
+  .status-entregado { background: #009726; } /* verde */
+  .status-cancelado { background: #ff0000; } /* rojo */
 }
