--- a/src/app/components/favorite-button/favorite-button.component.html
+++ b/src/app/components/favorite-button/favorite-button.component.html
@@ -1,3 +1,11 @@
-<button class="fav-btn" (click)="onToggle($event)" [attr.aria-pressed]="favorited">
-  <ion-icon [name]="favorited ? 'heart' : 'heart-outline'"></ion-icon>
-</button>
+<ion-button
+  class="fav-btn"
+  fill="clear"
+  (click)="toggleFavorite()"
+  [attr.aria-pressed]="isFavorited"
+  [class.filled]="isFavorited"
+  title="Favorito">
+  <ion-icon
+    slot="icon-only"
+    [name]="isFavorited ? 'heart' : 'heart-outline'"></ion-icon>
+</ion-button>
