--- a/src/app/pages/clientroute/clientroute.page.html
+++ b/src/app/pages/clientroute/clientroute.page.html
@@ -16,8 +16,12 @@
     <ion-list *ngIf="items && items.length > 0">
       <ion-item *ngFor="let it of items">
         <ion-label>
-          <h3>{{ it.title }}</h3>
-          <p>Cantidad: {{ it.qty }} · Precio: S/. {{ it.price | number:'1.2-2' }} </p>
+          <h3>
+            {{ it.title }}
+            <span class="size-tag" *ngIf="it.size">({{ getSizeLabel(it.size) }})</span>
+          </h3>
+          <p>Cantidad: {{ it.qty }}</p>
+          <p>Precio c/u: S/. {{ it.price | number:'1.2-2' }}</p>
         </ion-label>
         <div slot="end">
           <strong>S/. {{ (it.price || 0) * (it.qty || 0) | number:'1.2-2' }}</strong>
