--- a/src/app/pages/clientroute/clientroute.page.scss
+++ b/src/app/pages/clientroute/clientroute.page.scss
@@ -30,6 +30,13 @@ h2 {
 ion-textarea {
   min-height: 100px;
 }
+.size-tag {
+  font-size: 0.85rem;
+  font-weight: 500;
+  color: var(--ion-color-medium);
+  margin-left: 6px;
+  opacity: 0.9;
+}
 
 @import '@mapbox/mapbox-gl-geocoder/dist/mapbox-gl-geocoder.css';
 
