--- a/src/app/components/add-to-cart/add-to-cart.component.scss
+++ b/src/app/components/add-to-cart/add-to-cart.component.scss
@@ -3,7 +3,7 @@
   height: 36px;
   border-radius: 50%;
   display: inline-flex;
-  align-items: center;
+  align-items: flex-end;
   justify-content: center;
   padding: 0;
   background: rgba(255,255,255,0.98);
