--- a/src/app/pages/productos/productos.page.html
+++ b/src/app/pages/productos/productos.page.html
@@ -56,7 +56,7 @@
         <ion-col size="6" size-sm="4" size-md="3" *ngFor="let p of filtered; trackBy: trackById">
           <ion-card class="product-card compact" (click)="openProduct(p)">
             <div class="card-media">
-              <img [src]="p.imagen ?? p.image ?? 'assets/img/placeholder.png'" (error)="onImgError($event)" />
+              <img [src]="p.imagenUrl || p.imagen || p.image || 'assets/img/placeholder.png'" (error)="onImgError($event)" />
             </div>
             <ion-card-content class="compact-content">
               <div class="title">{{ p.nombre ?? p.name }}</div>
@@ -65,6 +65,7 @@
           </ion-card>
         </ion-col>
       </ion-row>
+      <br><br><br>
     </ion-grid>
 
     <div *ngIf="!loading && filtered.length === 0" class="empty">
