--- a/src/app/components/header/header/header.component.scss
+++ b/src/app/components/header/header/header.component.scss
@@ -3,7 +3,7 @@
 
 /* toolbar */
 .app-header-toolbar {
-  --background: #1a1a1a;
+  --background: #b40707;
   padding: 6px 10px;
   box-shadow: 0 1px 6px rgba(0,0,0,0.06);
 }
