--- a/src/app/pages/chat/chat.page.html
+++ b/src/app/pages/chat/chat.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>Chat con Ollama</ion-title>
+    <ion-title>Multipizza - BOT</ion-title>
   </ion-toolbar>
 </ion-header>
 
